# wegzetter

./: app.py  pyproject.toml
infra/: wegzetter_stack.py
tests/unit/: test_wegzetter_stack.py
wegzetter/: wegzetter_stack.py
