[tool.poetry]
name = "wegzetter"
version = "0.1.0"
description = ""
authors = ["ThomasStart"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.5.0"
aws-cdk-lib = "^2.154.1"
constructs = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
